--- a/main.tex
+++ b/main.tex
@@ -1,14 +1,11 @@
-\documentclass{article}
-\usepackage{graphicx} % Required for inserting images
+\documentclass[12pt]{article}
 
-\title{VCS - Statuten}
-\author{connor-puetz }
-\date{March 2025}
+\include{src/header}
 
 \begin{document}
 
 \maketitle
 
-\section{Introduction}
+\include{tex/statuten}
 
 \end{document}
